--- a/index.html
+++ b/index.html
@@ -428,6 +428,20 @@
                     </div>
                 </div>
             </article>
+
+             <!--Icon Column-->
+            <article class="column icon-left-column green-theme" style="background-image:url(images/background/image-4.jpg);">
+                <div class="overlay"></div>
+                
+                <div class="inner-box">
+                    <div class="icon-box"><span class="flaticon-clipboard-with-list"></span></div>
+                    <div class="content">
+                        <h3>Easy To Customise</h3>
+                        <div class="text">A successful marketing plan relies heavily on the pulling-power.</div>
+                        <div class="link"><a href="#" class="read-more">Find Out More <span class="fa fa-long-arrow-right"></span></a></div>
+                    </div>
+                </div>
+            </article>
             
         </div>
     </section>
