--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </article>
 
              <!--Icon Column-->
-            <article class="column icon-left-column green-theme" style="background-image:url(images/background/image-4.jpg);">
+            <article class="column icon-left-column red-theme" style="background-image:url(images/background/image-4.jpg);">
                 <div class="overlay"></div>
                 
                 <div class="inner-box">
