--- a/team-single.html
+++ b/team-single.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Sorto Multipurpose HTML5 Template | Meet Team Member</title>
+<title>String Unlimited | A Clothing Company &#8211; String Unlimited | A Clothing Company | Meet Team Member</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
