--- a/index-2.html
+++ b/index-2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Sorto Multipurpose HTML5 Template | Homepage One</title>
+<title>String Unlimited | A Clothing Company &#8211; String Unlimited | A Clothing Company | Homepage One</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
@@ -1418,7 +1418,7 @@
                 <div class="outer-box text-center">
                     
                     <!--Copyright-->
-                	<div class="copyright">&copy; Copyrights 2016 <a href="http://themeforest.net/user/themecraze/portfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
+                	<div class="copyright">&copy; Copyrights 2016 <a href="freesie-infotechportfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
                     
                 </div>
             </div>
