--- a/single-service.html
+++ b/single-service.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Sorto Multipurpose HTML5 Template | Single Service</title>
+<title>String Unlimited | A Clothing Company &#8211; String Unlimited | A Clothing Company | Single Service</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -327,7 +327,7 @@
                     </nav>
                     
                     <!--Copyright-->
-                	<div class="copyright pull-right">&copy; Copyrights 2016 <a href="http://themeforest.net/user/themecraze/portfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
+                	<div class="copyright pull-right">&copy; Copyrights 2016 <a href="freesie-infotechportfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
                     
                 </div>
             </div>
