--- a/index-2.html
+++ b/index-2.html
@@ -1503,7 +1503,7 @@
                 <div class="outer-box text-center">
                     
                     <!--Copyright-->
-                	<div class="copyright">&copy; Copyrights 2016 <a href="freesie-infotechportfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
+                	<div class="copyright">designed and developed by Freesie Infotech</div>
                     
                 </div>
             </div>
