--- a/services.html
+++ b/services.html
@@ -602,7 +602,7 @@
                     </nav>
                     
                     <!--Copyright-->
-                	<div class="copyright pull-right">&copy; Copyrights 2016 <a href="freesie-infotechportfolio" target="_blank">ThemeCraze</a>. All rights reserved</div>
+                	<div class="copyright pull-right">designed and developed by Freesie Infotech</div>
                     
                 </div>
             </div>
