--- a/index-2.html
+++ b/index-2.html
@@ -431,7 +431,7 @@
                 </div>
             </article>
              <!--Icon Column-->
-            <article class="column icon-left-column green-theme" style="background-image:url(images/background/image-4.jpg);">
+            <article class="column icon-left-column red-theme" style="background-image:url(images/background/image-4.jpg);">
                 <div class="overlay"></div>
                 
                 <div class="inner-box">
