--- a/index-2.html
+++ b/index-2.html
@@ -960,11 +960,11 @@
                             <div class="text">The buying of large-screen TVs has absolutely skyrocketed lately. It seems that everyone wants one – and with good reason.</div>
                         </div>
                         <div class="social-links">
-                        	<a href="#"><span class="fa fa-facebook-f"></span></a>
-                            <a href="#"><span class="fa fa-twitter"></span></a>
-                            <a href="#"><span class="fa fa-instagram"></span></a>
-                            <a href="#"><span class="fa fa-google-plus"></span></a>
-                            <a href="#"><span class="fa fa-linkedin"></span></a>
+                            <a href="mailto:anthuvan@strings-unlimited.com"><span class="fa fa-envelope-square" aria-hidden="true"></span></a>
+                        	<a href="https://www.facebook.com/Strings-Unlimited-Ltd-1842404015978162/?modal=composer&notif_id=1550511060550532&notif_t=aymt_upsell_tip&ref=notif"><span class="fa fa-facebook-f"></span></a>
+                            <a href="https://twitter.com/stringsunltd"><span class="fa fa-twitter"></span></a>
+                            <a href="https://www.pinterest.co.uk/stringsfactory/pins/"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
+                            <a href="https://www.linkedin.com/company/15262839/admin/"><span class="fa fa-linkedin"></span></a>
                         </div>
                     </div>
                 </div>
