--- a/contact-2.html
+++ b/contact-2.html
@@ -270,7 +270,7 @@
                 
                 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                         <div class="footer-widget about-widget">
-                            <h2>About Sorto</h2>
+                            <h2>About Strings-Unlimited</h2>
                             <div class="text">
                             	<p>These days are all share them with me oh baby a man is born he's a man of means then along come two they got nothing but their jeans the mate. </p>
                             </div>
