--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                             <div class="row clearfix">
                             	<!--Content Column-->
                                 <div class="content-column col-lg-7 col-sm-7 col-xs-12">
-                                	<h3>Sorto is A Real Beautiful Theme</h3>
+                                	<h3>Strings-Unlimited is A Real Beautiful Theme</h3>
                                     <div class="upper-content">
                                     	<div class="text">
                                         	<p>Classifieds are usually the first place you think of when you are getting ready to make a purchase. Whether you want to purchase a vehicle, bed, or pet, the classified section of your local newspaper can be one of the best resources available. With the emergence of the web however, many sites are being developed to host free classifieds.</p>
@@ -1433,7 +1433,7 @@
                 
                 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                         <div class="footer-widget about-widget">
-                            <h2>About Sorto</h2>
+                            <h2>About Strings-Unlimited</h2>
                             <div class="text">
                             	<p>These days are all share them with me oh baby a man is born he's a man of means then along come two they got nothing but their jeans the mate. </p>
                             </div>
